# setuptools_dso

./: .appveyor.yml  .buildinfo  .gitignore  .travis.yml  COPYRIGHT  MANIFEST.in  README.md  appveyor-build.bat  details.html  genindex.html  index.html  objects.inv  probe.html  py-modindex.html  releasenotes.html  search.html  searchindex.js  setup.py  testme.sh  travis-docker.sh  travis-osx.sh  usage.html
.github/workflows/: build.yml
_sources/: probe.rst.txt
_static/: alabaster.css
documentation/: Makefile  commit-gh.sh  conf.py  details.rst  index.rst  probe.rst  releasenotes.rst  usage.rst
example/: MANIFEST.in  bar.cpp  extension.cpp  foo.c  mylib.h  pyproject.toml  setup-dso-only.py  setup.py
example/dsodemo/: cli.py
example/namespaces/package-core/: pyproject.toml  setup.py
example/namespaces/package-dso/: .gitignore  MANIFEST.in  pyproject.toml  setup.py
example/namespaces/package-dso/testnsp/testdso/: cyththing.pyx  libtest.c
example/project2/: MANIFEST.in  setup.py
example/project2/src/use_dsodemo/: cli.py  ext.cpp
example/src/: extension.cpp  foo.c  mylib.h
example/src/dsodemo/: __init__.py  cli.py
example/src/dsodemo/ext/: __init__.py
src/setuptools_dso/: __init__.py  compiler.py  develop.py  dsocmd.py  probe.py  runtime.py
src/setuptools_dso/test/: test_parallel.py  test_probe.py
