[build-system]
requires = [
	"setuptools>=61",
	"wheel",
]
build-backend = "setuptools.build_meta"

[project]
name = "test-dso-nsp-core"
version = "0.0.0"
authors = [
    {name = "Nathan/Eilisha Shiraini", email = "jean.bon@free.fr"},
]
description = "Namespace package to test Setuptools-DSO"
requires-python = ">=3.11"

[tool.setuptools]
include-package-data = false

[tool.setuptools.packages.find]
include = [
	"testnsp.testcore",
	"testnsp.testcore.*",
]
namespaces = true
