[build-system]
requires = [
	"setuptools>=61",
	"wheel",
	"setuptools-dso",
	"cython",
]
build-backend = "setuptools.build_meta"

[project]
name = "test-dso-nsp-dso"
version = "0.0.0"
authors = [
    {name = "Nathan/Eilisha Shiraini", email = "jean.bon@free.fr"},
]
description = "Namespace package to test Setuptools-DSO"
requires-python = ">=3.11"
dependencies = [
	"test-dso-nsp-core"
]

[tool.setuptools]
include-package-data = false

[tool.setuptools.packages.find]
include = [
	"testnsp.testdso",
	"testnsp.testdso.*",
]
namespaces = true
